--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -31,6 +31,8 @@ simd = ["datafusion/simd"]
 snmalloc = ["snmalloc-rs"]
 
 [dependencies]
+# arrow = { path = "../../arrow-rs/arrow", default-features = false, features = ["simd"] }
+arrow = "^4.0.0"
 datafusion = { path = "../datafusion" }
 ballista = { path = "../ballista/rust/client" }
 structopt = { version = "0.3", default-features = false }
@@ -38,4 +40,4 @@ tokio = { version = "^1.0", features = ["macros", "rt", "rt-multi-thread"] }
 futures = "0.3"
 env_logger = "^0.8"
 mimalloc = { version = "0.1", optional = true, default-features = false }
-snmalloc-rs = {version = "0.2", optional = true, features= ["cache-friendly"] }
+snmalloc-rs = { version = "0.2", optional = true, features = ["cache-friendly"] }
