--- a/datafusion/Cargo.toml
+++ b/datafusion/Cargo.toml
@@ -24,12 +24,8 @@ repository = "https://github.com/apache/arrow-datafusion"
 readme = "../README.md"
 authors = ["Apache Arrow <dev@arrow.apache.org>"]
 license = "Apache-2.0"
-keywords = [ "arrow", "query", "sql" ]
-include = [
-    "benches/*.rs",
-    "src/**/*.rs",
-    "Cargo.toml",
-]
+keywords = ["arrow", "query", "sql"]
+include = ["benches/*.rs", "src/**/*.rs", "Cargo.toml"]
 edition = "2018"
 
 [lib]
@@ -46,29 +42,29 @@ unicode_expressions = ["unicode-segmentation"]
 [dependencies]
 ahash = "0.7"
 hashbrown = "0.11"
-arrow = { version = "4.0", features = ["prettyprint"] }
-parquet = { version = "4.0", features = ["arrow"] }
+arrow = { version="4.0", features=["prettyprint"] }
+parquet = { version="4.0", features=["arrow"] }
 sqlparser = "0.9.0"
 paste = "^1.0"
 num_cpus = "1.13.0"
 chrono = "0.4"
 async-trait = "0.1.41"
 futures = "0.3"
-pin-project-lite= "^0.2.0"
-tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
+pin-project-lite = "^0.2.0"
+tokio = { version="1.0", features=["macros", "rt", "rt-multi-thread", "sync"] }
 tokio-stream = "0.1"
 log = "^0.4"
-md-5 = { version = "^0.9.1", optional = true }
-sha2 = { version = "^0.9.1", optional = true }
+md-5 = { version="^0.9.1", optional=true }
+sha2 = { version="^0.9.1", optional=true }
 ordered-float = "2.0"
-unicode-segmentation = { version = "^1.7.1", optional = true }
-regex = { version = "^1.4.3", optional = true }
-lazy_static = { version = "^1.4.0", optional = true }
-smallvec = { version = "1.6", features = ["union"] }
+unicode-segmentation = { version="^1.7.1", optional=true }
+regex = { version="^1.4.3", optional=true }
+lazy_static = { version="^1.4.0", optional=true }
+smallvec = { version="1.6", features=["union"] }
 rand = "0.8"
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = { version="0.3", features=["async_futures"] }
 tempfile = "3"
 doc-comment = "0.3"
 
@@ -98,4 +94,8 @@ harness = false
 
 [[bench]]
 name = "expression_query"
+harness = false
+
+[[bench]]
+name = "math_query_stream"
 harness = false
